feat: migrate to ESM

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,25 +11,22 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-    "moduleResolution": "node",
-    "module": "CommonJS",
+    "isolatedModules": true,
+    "moduleResolution": "NodeNext",
+    "module": "ESNext",
     "target": "ES2022",
     "baseUrl": "./src",
     "paths": {
-      "@": ["index"],
-      "@/*": ["*"]
+      "#*": ["*"]
     },
+    "skipLibCheck": true,
     "noEmit": true
   },
   "include": [
     "./src/**/*",
     "./src/**/*.json",
     "./tests/**/*",
-    "./scripts/**/*"
-  ],
-  "ts-node": {
-    "require": ["tsconfig-paths/register"],
-    "transpileOnly": true,
-    "swc": true
-  }
+    "./scripts/**/*",
+    "./benches/**/*"
+  ]
 }
